--- a/index.html
+++ b/index.html
@@ -11,334 +11,344 @@
 
 <body>
     <div class="container">
+
         <!-- row 1 -->
         <div class="row">
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
         </div>
+
         <!-- row 2 -->
         <div class="row">
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
         </div>
+
         <!-- row 3 -->
         <div class="row">
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
         </div>
+
         <!-- row 4 -->
         <div class="row">
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
         </div>
+
         <!-- row 5 -->
         <div class="row">
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
         </div>
+
         <!-- row 6 -->
         <div class="row">
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
         </div>
+
         <!-- row 7 -->
         <div class="row">
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
         </div>
+
         <!-- row 8-->
         <div class="row">
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
         </div>
+
         <!-- row 9 -->
         <div class="row">
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
         </div>
+
         <!-- row 10 -->
         <div class="row">
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
             <div class="card">
-                <span class="value"></span>
+                <span class="value display_none"></span>
             </div>
         </div>
 
